front-end/src/components/theZone/TheZone.css
.TheZoneContainer {
  width:100%;
  height:7vh;
  border: 1px solid #000000;
}
.redirect {
  width: 33.3%;
  font-size: 3.5vh;
}

body {
   background-color:#222629;
   color:#6B6E70;
}
button {
  background-color: #474B4F;
  color: #6B6E70;
  height:40px;
}
textarea {
  width: calc(100% - 10px);
  margin: 2px;
}

